tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Valid/SingleEnum.php
<?php

declare(strict_types=1);

namespace Fixture\SingleClassPerFile\Valid;

enum SingleEnum: string
{
    case Example = 'example';
}
